<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    tools:context="example.pedrow10.adminlibrosmov.EditarLibrosActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/tituloPantallaEditarLibros"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblId"
        android:textSize="25dp"/>
    <TextView
        android:id="@+id/editTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblAutor"
        android:textSize="25dp"/>
    <EditText
        android:id="@+id/editTextAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblTitulo"
        android:textSize="25dp"/>
    <EditText
        android:id="@+id/editTextTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblStock"
        android:textSize="25dp"/>
    <EditText
        android:id="@+id/editTextStcck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGuardarLibro"
            android:onClick="guuardarLibro"/>

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/lblResultado"/>
</LinearLayout>
